Design small fixes

--- a/ZeldaWebsite/Views/Manager/Index.cshtml
+++ b/ZeldaWebsite/Views/Manager/Index.cshtml
@@ -11,7 +11,7 @@
     <a asp-action="Create" style="color:darkblue">Create New</a>
 </p>
 </div>
-<table class="table">
+<table class="table ml-20 mr-20">
     <thead>
         <tr>
             <th>
