--- a/ZeldaWebsite/Views/Order/Checkout.cshtml
+++ b/ZeldaWebsite/Views/Order/Checkout.cshtml
@@ -23,12 +23,12 @@
 	</div>
 	<div class="site-section">
 		<div class="container">
-			<form asp-controller="Order" asp-action="CreateOrder" method="post">
+			<form asp-controller="Order" asp-action="CreateOrder" method="post" class="form-contact">
 				@Html.AntiForgeryToken()
 				<div class="row">
 					<div class="col-md-6 mb-5 mb-md-0">
 						<h2 class="h3 mb-3 text-black">Billing Details</h2>
-						<div class="p-3 p-lg-5 border">
+						<div class="p-3 p-lg-5 mb-10 border">
 							<div class="form-group row">
 								<div class="col-md-6">
 									<label asp-for="FirstName" class="text-black">First Name <span class="text-danger">*</span></label>
