--- a/ZeldaWebsite/Views/Shared/ProjectLayout.cshtml
+++ b/ZeldaWebsite/Views/Shared/ProjectLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="~/assets/img/favicon.ico">
 
 	<!-- CSS here -->
     <link rel="stylesheet" href="~/assets/css/bootstrap.min.css">
@@ -57,15 +57,6 @@
                                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                                         <li><a asp-controller="Home" asp-action="Flavours">shop</a></li>
                                         <li><a asp-controller="Home" asp-action ="About">About</a></li>
-                                        <!--<li>
-                                            <a href="blog.html">Blog</a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog_details.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Elements</a></li>
-                                                <li><a href="product_details.html">Product Details</a></li>
-                                            </ul>
-                                        </li>-->
                                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -117,100 +108,57 @@
         @RenderBody()
     </div>
     <footer>
-    <!-- Footer Start-->
-    <div class="footer-area footer-padding">
-        <div class="container-fluid ">
-            <div class="row d-flex justify-content-between">
-                <div class="col-xl-3 col-lg-3 col-md-8 col-sm-8">
-                 <div class="single-footer-caption mb-50">
-                   <div class="single-footer-caption mb-30">
-                      <!-- logo -->
-                      <div class="footer-logo mb-35">
-                       <a href="index.html"><img src="~/assets/img/logo/logo2_footer.png" alt=""></a>
-                   </div>
-                   <div class="footer-tittle">
-                       <div class="footer-pera">
-                           <p>Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
-                       </div>
-                   </div>
-                   <!-- social -->
-                   <div class="footer-social">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+        <!-- Footer Start-->
+        <div class="footer-area footer-padding">
+            <div class="container-fluid">
+                <div class="row">
+                    <!-- Social Links -->
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="single-footer-caption mb-30">
+                            <div class="footer-tittle">
+                                <h4>Social</h4>
+                                <div class="footer-social">
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Quick Links -->
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="single-footer-caption mb-30">
+                            <div class="footer-tittle">
+                                <h4>Quick links</h4>
+                                <ul>
+                                    <li><a asp-controller="Home" asp-action="Flavours">Our Flavours</a></li>
+                                    <li><a href="#">Shippment Policy</a></li>
+                                    <li><a asp-controller="Home" asp-action="About">About Us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Get in Touch -->
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+                        <div class="single-footer-caption mb-30">
+                            <div class="footer-tittle">
+                                <h4>Get in touch</h4>
+                                <ul>
+                                    <li><a href="#">054 845 5118</a></li>
+                                    <li><a href="#">tziporamaroko@gmail.com</a></li>
+                                    <li><a href="#">Campus Lustig, Ramat Gan</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-        <div class="single-footer-caption mb-50">
-            <div class="footer-tittle">
-                <h4>Quick links</h4>
-                <ul>
-                    <li><a href="#">Image Licensin</a></li>
-                    <li><a href="#">Style Guide</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-        <div class="single-footer-caption mb-50">
-            <div class="footer-tittle">
-                <h4>Shop Category</h4>
-                <ul>
-                    <li><a href="#">Image Licensin</a></li>
-                    <li><a href="#">Style Guide</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-        <div class="single-footer-caption mb-50">
-            <div class="footer-tittle">
-                <h4>Pertners</h4>
-                <ul>
-                    <li><a href="#">Image Licensin</a></li>
-                    <li><a href="#">Style Guide</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
-        <div class="single-footer-caption mb-50">
-            <div class="footer-tittle">
-                <h4>Get in touch</h4>
-                <ul>
-                    <li><a href="#">(89) 982-278 356</a></li>
-                    <li><a href="#">demo@colorlib.com</a></li>
-                    <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-</div>
-<!-- footer-bottom area -->
-<div class="footer-bottom-area">
-    <div class="container">
-        <div class="footer-border">
-           <div class="row d-flex align-items-center">
-               <div class="col-xl-12 ">
-                   <div class="footer-copy-right text-center">
-                       <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- Footer End-->
-</footer>
+        <!-- Footer End-->
+    </footer>
+
     <!--? Search model Begin -->
     <div class="search-model-box">
         <div class="h-100 d-flex align-items-center justify-content-center">
