--- a/ZeldaWebsite/Views/Home/LogIn.cshtml
+++ b/ZeldaWebsite/Views/Home/LogIn.cshtml
@@ -12,16 +12,16 @@
             <div class="layout_padding">
                 <div class="row justify-content-center align-items-center">
                     <div class="col-md-6">
-                        <form asp-action="LogIn">
+                        <form asp-action="LogIn" class="form-contact">
                             <div class="contact_form-container">
-                                <h2><span>Log In</span></h2>
+                                <h2><span>Manager Log In</span></h2>
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="center">
-                                    <input asp-for="UserName" class="form-control mb-3" placeholder="User Name" width="150" />
+                                    <input asp-for="UserName" class="form-control mb-3 valid" placeholder="User Name" width="150" />
                                     <span asp-validation-for="UserName" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" asp-for="Password" class="form-control mb-3" placeholder="Password" width="150" />
+                                    <input type="password" asp-for="Password" class="form-control mb-3 valid" placeholder="Password" width="150" />
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                                 <div class="form-group text-center">
