--- a/ZeldaWebsite/Views/Manager/Index.cshtml
+++ b/ZeldaWebsite/Views/Manager/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/ManagerLayout.cshtml";
 }
 <div class="ml-55">
-<h1>Index</h1>
+    <h1>Our Flavours</h1>
 
 <p>
-    <a asp-action="Create" style="color:darkblue">Create New</a>
+        <a asp-controller="Manager" asp-action="Create" style="color:darkblue">Create New</a>
 </p>
 </div>
 <table class="table ml-20 mr-20">
