--- a/ZeldaWebsite/Views/Order/ThankYou.cshtml
+++ b/ZeldaWebsite/Views/Order/ThankYou.cshtml
@@ -28,7 +28,7 @@
             <span class="icon-check_circle display-3 text-success"></span>
             <h2 class="display-3 text-black">Thank you!</h2>
             <p class="lead mb-5">You order was successfuly completed.</p>
-            <p><a class="btn btn-sm btn-primary" asp-controller="Home" asp-action="Index">Back to shop</a></p>
+            <p><a class="btn btn-sm btn-primary mb-35" asp-controller="Home" asp-action="Index">Back to shop</a></p>
           </div>
         </div>
       </div>
